cambiada animación de modulos a flip. Arreglados algunos bugs pequeños con IE

--- a/app/assets/sass/partials/_sprites.scss
+++ b/app/assets/sass/partials/_sprites.scss
@@ -299,7 +299,7 @@
 	padding: 21px 28px;
 	&.small {
 		background: transparent url("../images/sprite.png") no-repeat scroll -311px -156px;
-		padding: 11px 10px;
+		padding: 11px 11px;
 	}
 }
 .icon-calendar-gray-2 {
