--- a/app/assets/sass/partials/_timeline.scss
+++ b/app/assets/sass/partials/_timeline.scss
@@ -250,9 +250,7 @@
         }
       }
 
-      .flip-container {
-        border: 0;
-      }
+
     }
 
     .timelineDot-general {
